<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressDialog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"/>


<LinearLayout
android:orientation="vertical"
    android:id="@+id/background_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_four_dp"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageview"
                android:layout_width="140dp"
                android:scaleType="centerCrop"
                android:layout_margin="@dimen/dimen_eight_dp"
                android:layout_height="140dp"
                tools:background="@tools:sample/backgrounds/scenic"/>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_six_dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dimen_four_dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/location"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/text_location_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/reputation"
                        android:layout_marginStart="@dimen/dimen_four_dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/purple_500" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_six_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_reputaion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/reputation"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/text_reputaion_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/reputation"
                        android:layout_marginStart="@dimen/dimen_four_dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/purple_500" />

                </LinearLayout>
            </LinearLayout>




        </LinearLayout>

    <TextView
        android:id="@+id/text_creation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_six_dp"
        android:gravity="center"
        android:padding="@dimen/dimen_four_dp"
        android:text="@string/creation"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_badges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_six_dp"
        android:gravity="center"
        android:padding="@dimen/dimen_four_dp"
        android:text="@string/Badges"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_four_dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/dimen_four_dp"
            android:background="@color/white"
            android:elevation="@dimen/dimen_eight_dp"
            app:cardCornerRadius="@dimen/dimen_eight_dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_gold_badge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_six_dp"
                    android:gravity="center"
                    android:text="@string/one"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_six_dp"
                    android:gravity="center"
                    android:text="@string/gold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
               <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/dimen_four_dp"
            android:background="@color/white"
            android:elevation="@dimen/dimen_eight_dp"
            app:cardCornerRadius="@dimen/dimen_eight_dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_silver_badge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_six_dp"
                    android:gravity="center"
                    android:text="@string/one"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_six_dp"
                    android:gravity="center"
                    android:text="@string/silver"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/dimen_four_dp"
            android:background="@color/white"
            android:elevation="@dimen/dimen_eight_dp"
            app:cardCornerRadius="@dimen/dimen_eight_dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_bronze_badge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_six_dp"
                    android:gravity="center"
                    android:text="@string/one"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_six_dp"
                    android:gravity="center"
                    android:text="@string/bronze"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
    <TextView
        android:id="@+id/textlabeltags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_six_dp"
        android:gravity="center"
        android:padding="@dimen/dimen_four_dp"
        android:text="@string/Tags"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/adapter_tags"
        tools:itemCount="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintStart_toStartOf="parent"/>

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>